--- a/package.json
+++ b/package.json
@@ -8,13 +8,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "antd": "^4.22.7",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
   "devDependencies": {
+    "@types/node": "^18.7.11",
     "@types/react": "^17.0.33",
     "@types/react-dom": "^17.0.10",
     "@vitejs/plugin-react": "^1.0.7",
+    "less": "^4.1.3",
     "typescript": "^4.5.4",
     "vite": "^2.8.0"
   }
