--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "dependencies": {
         "antd": "^4.22.7",
         "classnames": "^2.3.1",
+        "dayjs": "^1.11.5",
         "react": "^17.0.2",
         "react-dom": "^17.0.2"
     },
