--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
         "qs": "^6.11.0",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
-        "react-redux": "^8.0.2"
+        "react-redux": "^8.0.2",
+        "slate": "^0.82.1",
+        "slate-react": "^0.82.1"
     },
     "devDependencies": {
         "@commitlint/cli": "^16.2.3",
