--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "react-dom": "^17.0.2",
         "react-redux": "^8.0.2",
         "slate": "^0.82.1",
+        "slate-history": "^0.66.0",
         "slate-react": "^0.82.1"
     },
     "devDependencies": {
